--- a/about/index.html
+++ b/about/index.html
@@ -258,11 +258,11 @@ in the consumer sales space and chemical profile recommenders.</p>
 </div>
 <div class="card-body docutils">
 <p class="card-text">POSTDOCTORAL RESEARCH FELLOW (Biological Machine Learning and AI) - University of North Carolina, Lineberger Cancer Center</p>
-<p class="card-text">American Heart Association funded research fellow in AI-driven precision medicine
-Identifying, modeling, and understanding noise in single cell signaling during stress responses focusing on utilization of live cell imaging and machine learning on big data
-Built and ran Data Science and Data Engineering capabilities in the areas of computer vision, natural language processing, artificial intelligence, infrastructure, high performance computing, predictive modeling, and mathematical modeling
-Built and maintained live cell imaging infrastructure, developed a suite of machine learning algorithms to understand noise in single cell signaling, wrote and secured two fellowships, directly contributed to high impact publications and invited for speaking engagements, and mentored several graduate students and postdoctoral fellows.
-Extensive experience working with time series data from signal data from engineering of pipelines and early data processing to complex machine learning algorithm development and implementation for decision-making and novel hypothesis generation</p>
+<p class="card-text">American Heart Association funded research fellow in AI-driven precision medicine</p>
+<p class="card-text">Identifying, modeling, and understanding noise in single cell signaling during stress responses focusing on utilization of live cell imaging and machine learning on big data</p>
+<p class="card-text">Built and ran Data Science and Data Engineering capabilities in the areas of computer vision, natural language processing, artificial intelligence, infrastructure, high performance computing, predictive modeling, and mathematical modeling</p>
+<p class="card-text">Built and maintained live cell imaging infrastructure, developed a suite of machine learning algorithms to understand noise in single cell signaling, wrote and secured two fellowships, directly contributed to high impact publications and invited for speaking engagements, and mentored several graduate students and postdoctoral fellows.</p>
+<p class="card-text">Extensive experience working with time series data from signal data from engineering of pipelines and early data processing to complex machine learning algorithm development and implementation for decision-making and novel hypothesis generation</p>
 </div>
 </div>
 </div>
@@ -291,15 +291,15 @@ Microscopy | Cancer Therapeutics | E-commerce | Manuscript and Grant Preparation
 <p class="card-text">Experience</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Global Traits Digital Science Lead and Traits Discovery and Delivery Program Lead - Syngenta
-8+ years of Data Science and Machine Learning Engineering Leadership and Strategy Development at the Director or VP level
-11+ years solutioning ML/AI architecture
-5 patents awarded or in final status for the development and application of novel applications of ML/AI
-25+ Member teams across disciplines in data and product
-21 years of production Software Engineering experience
-17 years of production Data Science/ML/AI experience and leadership
-17 years of rigorous scientific training in academic programs - healthcare and precision medicine
-Industry proven leader in Data Science and Machine Learning Innovation across the AI landscape</p>
+<p class="card-text">GLOBAL TRAITS DIGITAL SCIENCE LEAD, GLOBAL TRAITS DISCOVERY AND DELIVERY PROGRAM LEAD - Syngenta</p>
+<p class="card-text">8+ years of Data Science and Machine Learning Engineering Leadership and Strategy Development at the Director or VP level</p>
+<p class="card-text">11+ years solutioning ML/AI architecture</p>
+<p class="card-text">5 patents awarded or in final status for the development and application of novel applications of ML/AI</p>
+<p class="card-text">25+ Member teams across disciplines in data and product</p>
+<p class="card-text">21 years of production Software Engineering experience</p>
+<p class="card-text">17 years of production Data Science/ML/AI experience and leadership</p>
+<p class="card-text">17 years of rigorous scientific training in academic programs - healthcare and precision medicine</p>
+<p class="card-text">Industry proven leader in Data Science and Machine Learning Innovation across the AI landscape</p>
 </div>
 </div>
 </div>
