--- a/genindex/index.html
+++ b/genindex/index.html
@@ -100,7 +100,7 @@
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
     <div class="title">Director of Data Science/ML/AI and Technical Lead / Strategic Vision</div>
-    <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research | Strategy</div>
+    <div class="specialties">Machine learning | Predictive Modeling | Data Science | Biomedical Research | Strategy and Vision | Leadership | Clinical AI | Startups</div>
 </div>
           </div>
           
