updates to roles

--- a/about/index.html
+++ b/about/index.html
@@ -181,8 +181,21 @@
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Mayo Clinic (Rochester, MN)</p>
-<p class="card-text">SENIOR ARCHITECT AND TECHNICAL DEVELOPMENT LEAD</p>
+<p class="card-text">Mayo Clinic (Rochester, MN) - Multiple roles spanning teams
+Additional research focus is on modernizing predictive pipelines and modeling capabilities through the utilization of knowledge graphs, agentic agents, analytical AI, focusing on clinical implementation. I work primarily with Multimodal models and solution from naive builds to fine tuning foundation models and GraphRAG.
+My goal is to provide clinicians with predictive assesment data, therapeutic planning strategies, and risk identification and scoring to lower clinician fatigue and improve patient outcomes.
+As part of this work, I am currently developing an algorithm and model platform to identify cognitive complexity for each patient touchpoint and the summation to the clinician’s day load.
+Please reach out to chat about my research, or any of the work below.</p>
+<p class="card-text">Technical Lead and Lead Solution Architect (Transformation Hub) - Rochester, MN</p>
+<p class="card-text">Leading technical development of the Transformation Hub products and core infrastructure assets and  partnering with product to realize needs through solutioning and execution</p>
+<p class="card-text">Collaborating tightly with product management to create a cohesive execution strategy and ways of work</p>
+<p class="card-text">Serving as the technical liaison between the Transformation Hub and other Mayo teams and initiatives</p>
+<p class="card-text">Designed and executing the overarching Transformation Hub  technical and product architecture that focuses on future state technologies and capabilities to bring the highest value to CDH and the Mayo Clinic through innovation acceleration, knowledge generation, analytics engines, artificial intelligence, data and model assets, and modular for efficiency and scalability</p>
+<p class="card-text">Developing a Knowledge Hub utilizing data scraping and aggregation to build an advanced knowledge graph using an LLM and exposing these data through  APIs, chat, document generation, and product integration through GraphRAG approaches - LLM-created multimodal knowledge graph supporting GraphRAG, Analytical Agents, and direct queries for institutional knowledge understanding, resource planning, and enablement opportunities
+Developing an Intake and Triage web application that will utilize the Knowledge Hub and CDH Capabilities models through artificial intelligence to guide innovators and CDH customers/stakeholders to the quickest realization of CDH service - this system aims to further provide CDH with internal insights around gaps, opportunities, staffing, and the ability to build capacity balancing into the general Intake and Triage engine</p>
+<p class="card-text">Senior Analytics Architect (Solution Enablement) - Rochester, MN</p>
+<p class="card-text">Serving as a team leader for a group of analytics architects to provide solutioning to Center for Digital Health (CDH)  and Enterprise needs</p>
+<p class="card-text">Developing an artificial intelligence system to provide self service analytic, dashboard, and insights capabilities from Mayo Clinic data encompassing practice information to capabilities writ large</p>
 <p class="card-text">More about my work to come. Reach out to me through email or LinkedIn to chat.</p>
 </div>
 </div>
